--- a/src/app/users/register.component.html
+++ b/src/app/users/register.component.html
@@ -24,7 +24,7 @@
     <div class="form-group" >
       <button type="button" (click)="cancel()" *ngIf="!saving">Cancel</button>
       <button class="save" type="submit" *ngIf="!saving" [disabled]="registerForm.invalid">Save</button>
-      <loading-spinner [loading]="saving"></loading-spinner>
+      <shared-loading-spinner [loading]="saving"></shared-loading-spinner>
     </div>
   </form>
 </div>
